area selection example on notebook

--- a/notebooks/graphics/single_map.ipynb
+++ b/notebooks/graphics/single_map.ipynb
@@ -48,24 +48,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[33m2023-11-06 17:17:12 :: eccodes :: WARNING  -> ShortName tprate have multiple grib codes associated: ['260048', '172228']\u001b[0m\n",
-      "\u001b[33m2023-11-06 17:17:12 :: eccodes :: WARNING  -> AQUA will take the first so that tprate -> 260048, please set up a correct fix if this does not look right\u001b[0m\n",
-      "\u001b[33m2023-11-06 17:17:12 :: eccodes :: WARNING  -> ShortName tcc have multiple grib codes associated: ['228164', '164']\u001b[0m\n",
-      "\u001b[33m2023-11-06 17:17:12 :: eccodes :: WARNING  -> AQUA will take the first so that tcc -> 228164, please set up a correct fix if this does not look right\u001b[0m\n",
-      "\u001b[33m2023-11-06 17:17:13 :: eccodes :: WARNING  -> ShortName sst have multiple grib codes associated: ['34', '151159']\u001b[0m\n",
-      "\u001b[33m2023-11-06 17:17:13 :: eccodes :: WARNING  -> AQUA will take the first so that sst -> 34, please set up a correct fix if this does not look right\u001b[0m\n",
-      "\u001b[33m2023-11-06 17:17:12 :: eccodes :: WARNING  -> AQUA will take the first so that tprate -> 260048, please set up a correct fix if this does not look right\u001b[0m\n",
-      "\u001b[33m2023-11-06 17:17:12 :: eccodes :: WARNING  -> ShortName tcc have multiple grib codes associated: ['228164', '164']\u001b[0m\n",
-      "\u001b[33m2023-11-06 17:17:12 :: eccodes :: WARNING  -> AQUA will take the first so that tcc -> 228164, please set up a correct fix if this does not look right\u001b[0m\n",
-      "\u001b[33m2023-11-06 17:17:13 :: eccodes :: WARNING  -> ShortName sst have multiple grib codes associated: ['34', '151159']\u001b[0m\n",
-      "\u001b[33m2023-11-06 17:17:13 :: eccodes :: WARNING  -> AQUA will take the first so that sst -> 34, please set up a correct fix if this does not look right\u001b[0m\n"
+      "\u001b[33m2023-11-12 16:08:22 :: eccodes :: WARNING  -> ShortName tprate have multiple grib codes associated: ['260048', '172228']\u001b[0m\n",
+      "\u001b[33m2023-11-12 16:08:22 :: eccodes :: WARNING  -> AQUA will take the first so that tprate -> 260048, please set up a correct fix if this does not look right\u001b[0m\n",
+      "\u001b[33m2023-11-12 16:08:22 :: eccodes :: WARNING  -> ShortName tcc have multiple grib codes associated: ['228164', '164']\u001b[0m\n",
+      "\u001b[33m2023-11-12 16:08:22 :: eccodes :: WARNING  -> AQUA will take the first so that tcc -> 228164, please set up a correct fix if this does not look right\u001b[0m\n",
+      "\u001b[33m2023-11-12 16:08:22 :: eccodes :: WARNING  -> ShortName sst have multiple grib codes associated: ['34', '151159']\u001b[0m\n",
+      "\u001b[33m2023-11-12 16:08:22 :: eccodes :: WARNING  -> AQUA will take the first so that tprate -> 260048, please set up a correct fix if this does not look right\u001b[0m\n",
+      "\u001b[33m2023-11-12 16:08:22 :: eccodes :: WARNING  -> ShortName tcc have multiple grib codes associated: ['228164', '164']\u001b[0m\n",
+      "\u001b[33m2023-11-12 16:08:22 :: eccodes :: WARNING  -> AQUA will take the first so that tcc -> 228164, please set up a correct fix if this does not look right\u001b[0m\n",
+      "\u001b[33m2023-11-12 16:08:22 :: eccodes :: WARNING  -> ShortName sst have multiple grib codes associated: ['34', '151159']\u001b[0m\n",
+      "\u001b[33m2023-11-12 16:08:22 :: eccodes :: WARNING  -> AQUA will take the first so that sst -> 34, please set up a correct fix if this does not look right\u001b[0m\n"
      ]
     }
    ],
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -183,25 +182,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[37m2023-11-06 17:46:38 :: plot_single_map :: DEBUG    -> Loading data in memory\u001b[0m\n",
-      "\u001b[37m2023-11-06 17:46:38 :: plot_single_map :: DEBUG    -> Adding cyclic longitude\u001b[0m\n",
-      "\u001b[37m2023-11-06 17:46:38 :: plot_single_map :: DEBUG    -> Setting figsize to (11, 8.5)\u001b[0m\n",
-      "\u001b[37m2023-11-06 17:46:38 :: plot_single_map :: DEBUG    -> Setting vmin to 250\u001b[0m\n",
-      "\u001b[37m2023-11-06 17:46:38 :: plot_single_map :: DEBUG    -> Setting vmax to 320\u001b[0m\n",
-      "\u001b[37m2023-11-06 17:46:40 :: plot_single_map :: DEBUG    -> Adding coastlines\u001b[0m\n",
-      "\u001b[37m2023-11-06 17:46:40 :: cbar get label :: DEBUG    -> Using long_name as colorbar label\u001b[0m\n",
-      "\u001b[37m2023-11-06 17:46:40 :: cbar get label :: DEBUG    -> Adding units to colorbar label\u001b[0m\n",
-      "\u001b[37m2023-11-06 17:46:40 :: plot_single_map :: DEBUG    -> Setting colorbar label to Sea surface temperature [K]\u001b[0m\n",
-      "\u001b[37m2023-11-06 17:46:40 :: set map title :: DEBUG    -> Using long_name as map title\u001b[0m\n",
-      "\u001b[37m2023-11-06 17:46:40 :: set map title :: DEBUG    -> Adding time to map title\u001b[0m\n",
-      "\u001b[37m2023-11-06 17:46:40 :: plot_single_map :: DEBUG    -> Setting title to Sea surface temperature 1940-02-01T00:00:00.000000000\u001b[0m\n"
+      "\u001b[38;20m2023-11-12 16:08:29 :: plot_single_map :: INFO     -> Updating the log_level to DEBUG\u001b[0m\n",
+      "\u001b[37m2023-11-12 16:08:29 :: plot_single_map :: DEBUG    -> Loading data in memory\u001b[0m\n",
+      "\u001b[37m2023-11-12 16:08:29 :: plot_single_map :: DEBUG    -> Adding cyclic longitude\u001b[0m\n",
+      "\u001b[37m2023-11-12 16:08:29 :: plot_single_map :: DEBUG    -> Setting figsize to (11, 8.5)\u001b[0m\n",
+      "\u001b[37m2023-11-12 16:08:29 :: plot_single_map :: DEBUG    -> Setting vmin to 250\u001b[0m\n",
+      "\u001b[37m2023-11-12 16:08:29 :: plot_single_map :: DEBUG    -> Setting vmax to 320\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[37m2023-11-12 16:08:30 :: plot_single_map :: DEBUG    -> Adding coastlines\u001b[0m\n",
+      "\u001b[38;20m2023-11-12 16:08:30 :: cbar get label :: INFO     -> Updating the log_level to DEBUG\u001b[0m\n",
+      "\u001b[37m2023-11-12 16:08:30 :: cbar get label :: DEBUG    -> Using long_name as colorbar label\u001b[0m\n",
+      "\u001b[37m2023-11-12 16:08:30 :: cbar get label :: DEBUG    -> Adding units to colorbar label\u001b[0m\n",
+      "\u001b[37m2023-11-12 16:08:30 :: plot_single_map :: DEBUG    -> Setting colorbar label to Sea surface temperature [K]\u001b[0m\n",
+      "\u001b[38;20m2023-11-12 16:08:30 :: set map title :: INFO     -> Updating the log_level to DEBUG\u001b[0m\n",
+      "\u001b[37m2023-11-12 16:08:30 :: set map title :: DEBUG    -> Using long_name as map title\u001b[0m\n",
+      "\u001b[37m2023-11-12 16:08:30 :: set map title :: DEBUG    -> Adding time to map title\u001b[0m\n",
+      "\u001b[37m2023-11-12 16:08:30 :: plot_single_map :: DEBUG    -> Setting title to Sea surface temperature 1940-02-01T00:00:00.000000000\u001b[0m\n"
      ]
     },
     {
@@ -228,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -244,6 +252,24 @@
    ],
    "source": [
     "plot_single_map(sst_plot, contour=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from aqua.util import area_selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sst_sel = area_selection(sst_plot, lon=(-10,10), lat=(-99))"
    ]
   }
  ],
