fix dataset lumi (no run)

--- a/notebooks/reader/datasets_lumi.ipynb
+++ b/notebooks/reader/datasets_lumi.ipynb
@@ -232,7 +232,7 @@
     }
    ],
    "source": [
-    "inspect_catalogue(cat, model = 'IFS', exp = 'control-1950-devcon')"
+    "inspect_catalogue(cat, model = 'IFS', exp = 'control-1950-nemo-dev')"
    ]
   },
   {
@@ -2246,7 +2246,7 @@
    "outputs": [],
    "source": [
     "from aqua import Reader\n",
-    "reader = Reader(model='IFS', exp='control-1950-devcon', source='hourly-1deg')\n",
+    "reader = Reader(model='IFS', exp='control-1950-nemo-dev', source='hourly-1deg')\n",
     "data = reader.retrieve(var=\"2t\")"
    ]
   },
@@ -3724,7 +3724,7 @@
    "outputs": [],
    "source": [
     "from aqua import Reader\n",
-    "reader = Reader(model='IFS', exp='control-1950-devcon', source='monthly-1deg-2d')\n",
+    "reader = Reader(model='IFS', exp='control-1950-nemo-dev', source='monthly-1deg-2d')\n",
     "data = reader.retrieve(var=[\"hcc\", \"lcc\"])"
    ]
   },
@@ -4431,7 +4431,7 @@
    "outputs": [],
    "source": [
     "from aqua import Reader\n",
-    "reader = Reader(model='IFS', exp='historical-1990-devcon', source='hourly-1deg', freq=\"daily\", regrid=\"r200\")\n",
+    "reader = Reader(model='IFS', exp='historical-1990-nemo-dev', source='hourly-1deg', freq=\"daily\", regrid=\"r200\")\n",
     "data = reader.retrieve(var=\"2t\", regrid=True, timmean=True)"
    ]
   },
