--- a/diagnostics/tropical_cyclones/notebooks/cat_histogram.ipynb
+++ b/diagnostics/tropical_cyclones/notebooks/cat_histogram.ipynb
@@ -2,13 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "type",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/b/b382216/AQUA/diagnostics/tropical_cyclones/notebooks/cat_histogram.ipynb Cell 1\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Blevante.dkrz.de/home/b/b382216/AQUA/diagnostics/tropical_cyclones/notebooks/cat_histogram.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtropical_cyclones\u001b[39;00m \u001b[39mimport\u001b[39;00m TCs\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Blevante.dkrz.de/home/b/b382216/AQUA/diagnostics/tropical_cyclones/notebooks/cat_histogram.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39maqua\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutil\u001b[39;00m \u001b[39mimport\u001b[39;00m load_yaml\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Blevante.dkrz.de/home/b/b382216/AQUA/diagnostics/tropical_cyclones/notebooks/cat_histogram.ipynb#W0sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mplotting_hist\u001b[39;00m \u001b[39mimport\u001b[39;00m plot_hist_cat, plot_press_wind\n",
+      "File \u001b[0;32m~/AQUA/diagnostics/tropical_cyclones/notebooks/plotting_hist.py:6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mtempest_utils\u001b[39;00m \u001b[39mimport\u001b[39;00m getTrajectories\n\u001b[1;32m      9\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mplot_hist_cat\u001b[39m(trajfile1, trajfile2, trajfile3, ibtracs_file\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m     10\u001b[0m     \u001b[39m# tempest settings\u001b[39;00m\n\u001b[1;32m     11\u001b[0m     nVars \u001b[39m=\u001b[39m \u001b[39m10\u001b[39m\n",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.insert(0, '../') # Hack to import from parent directory, to be removed\n",
     "from tropical_cyclones import TCs\n",
     "from aqua.util import load_yaml\n",
     "from plotting_hist import plot_hist_cat, plot_press_wind"
