rm regrid from retrieve

--- a/notebooks/reader/datasets_lumi.ipynb
+++ b/notebooks/reader/datasets_lumi.ipynb
@@ -4432,7 +4432,8 @@
    "source": [
     "from aqua import Reader\n",
     "reader = Reader(model='IFS', exp='historical-1990-nemo-dev', source='hourly-1deg', freq=\"daily\", regrid=\"r200\")\n",
-    "data = reader.retrieve(var=\"2t\", regrid=True, timmean=True)"
+    "data = reader.retrieve(var=\"2t\")\n",
+    "data = reader.timmean(data)"
    ]
   },
   {
