--- a/notebooks/reader/regrid.ipynb
+++ b/notebooks/reader/regrid.ipynb
@@ -371,7 +371,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = reader.retrieve(regrid=True)\n",
+    "data = reader.retrieve()\n",
+    "data = reader.regrid(data)\n",
     "w0 = data.wo.isel(time=0)\n",
     "w0.isel(nz=5).plot()"
    ]
@@ -515,7 +516,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
