rm freq + little fix

--- a/notebooks/reader/timmean.ipynb
+++ b/notebooks/reader/timmean.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14731,7 +14731,8 @@
    ],
    "source": [
     "reader = Reader(model=\"IFS\", exp=\"tco2559-ng5\", source=\"ICMGG_atm2d\", freq='daily', fix=False)\n",
-    "data = reader.retrieve(timmean=True)\n",
+    "data = reader.retrieve()\n",
+    "data = reader.timmean(data)\n",
     "data"
    ]
   }
@@ -14752,7 +14753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4,
   "vscode": {
