rm 'vars' (keep only 'var')

--- a/notebooks/reader/regrid.ipynb
+++ b/notebooks/reader/regrid.ipynb
@@ -436,7 +436,7 @@
     "zoom=6\n",
     "\n",
     "reader = Reader(model=\"ICON\", exp=\"ngc3028\", source=\"P1D\", zoom=6, regrid=\"r100\")\n",
-    "data = reader.retrieve(vars=[\"to\", \"tke\", \"zos\", \"2t\"], regrid=True)"
+    "data = reader.retrieve(var=[\"to\", \"tke\", \"zos\", \"2t\"], regrid=True)"
    ]
   },
   {
