changed notebook accordingly

--- a/diagnostics/tropical_cyclones/notebooks/tropical_cyclones.ipynb
+++ b/diagnostics/tropical_cyclones/notebooks/tropical_cyclones.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before proceeding you should edit output file paths in `config/config_tcs.yml`"
+    "Before proceeding you should edit output file paths in `config_tcs_notebook.yml`"
    ]
   },
   {
@@ -26,14 +26,10 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "import os\n",
-    "import sys\n",
-    "\n",
-    "sys.path.insert(0, '../..')\n",
-    "from tropical_cyclones import TCs\n",
+    "from tropical_cyclones import TCs, multi_plot\n",
     "from aqua.util import load_yaml\n",
     "from aqua.logger import log_configure\n",
-    "mainlogger = log_configure('INFO', log_name='MAIN')\n",
-    "from tropical_cyclones import multi_plot, plot_trajectories"
+    "mainlogger = log_configure('INFO', log_name='MAIN')"
    ]
   },
   {
@@ -120,7 +116,7 @@
    "metadata": {},
    "source": [
     "Get variables and other parameters from configuration file and store them in a dictionary. To change experiment and change tempest-extremes \n",
-    "parameters and streaming options please see the config.yaml file in the config dir and adjust it accordingly."
+    "parameters and streaming options please see the config_tcs_notebook.yaml file in the same notebook dir and adjust it accordingly."
    ]
   },
   {
@@ -131,7 +127,7 @@
     {
      "data": {
       "text/plain": [
-       "{'dataset': {'model': 'IFS', 'exp': 'tco1279-orca025-cycle3', 'source2d': '2D_1h_native', 'source3d': '3D_1h_native'}, 'paths': {'tmpdir': '/home/b/b382216/scratch/tmpdir', 'fulldir': '/home/b/b382216/scratch/fullres/NetCDF', 'plotdir': '/home/b/b382216/scratch/fullres/PDF/'}, 'grids': {'lowgrid': 'r100', 'highgrid': 'r010'}, 'varlist': ['msl', '10u', '10v', 'tprate'], 'time': {'startdate': '2020-01-20', 'enddate': '2024-12-31', 'frequency': '6h'}, 'stream': {'streamstep': 10}, 'detect': {'boxdim': 10}, 'stitch': {'n_days_freq': 30, 'n_days_ext': 2}}"
+       "{'dataset': {'model': 'IFS', 'exp': 'tco2559-ng5-cycle3', 'source2d': '2D_1h_native', 'source3d': '3D_1h_native'}, 'paths': {'tmpdir': '/home/b/b382216/work/tc/tmpdir', 'fulldir': '/home/b/b382216/work/tc/fullres', 'plotdir': '/home/b/b382216/work/tc/Figures/'}, 'setup': {'loglevel': 'INFO'}, 'grids': {'lowgrid': 'r100', 'highgrid': 'r010'}, 'varlist': ['msl', '10u', '10v', 'tprate'], 'time': {'startdate': '2020-01-20', 'enddate': '2025-01-01', 'frequency': '6h'}, 'stream': {'streamstep': '10D'}, 'detect': {'boxdim': 10}, 'stitch': {'n_days_freq': 30, 'n_days_ext': 2}}"
       ]
      },
      "execution_count": 3,
@@ -141,7 +137,7 @@
    ],
    "source": [
     "# load the config file\n",
-    "tdict = load_yaml('../config/config_tcs.yaml')\n",
+    "tdict = load_yaml('config_tcs_notebook.yaml')\n",
     "tdict"
    ]
   },
@@ -160,8 +156,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tropical = TCs(tdict=tdict, streaming=True, stream_step=tdict['stream']['streamstep'], stream_unit=\"days\", \n",
-    "               stream_startdate=tdict['time']['startdate'], loglevel = \"WARNING\", nproc=1)\n",
+    "# initialise tropical class with streaming options\n",
+    "tropical = TCs(tdict=config, streaming=True,\n",
+    "                model=model, exp=exp, source2d=source2d, source3d=source3d,\n",
+    "                stream_step=config['stream']['streamstep'],\n",
+    "                stream_startdate=config['time']['startdate'],\n",
+    "                paths=paths,\n",
+    "                loglevel=loglevel,\n",
+    "                nproc=1)\n",
     "tropical.loop_streaming(tdict)"
    ]
   },
@@ -353,9 +355,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TCs",
+   "display_name": "aqua_common",
    "language": "python",
-   "name": "tcs"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -367,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
