--- a/diagnostics/tropical_cyclones/notebooks/tropical_cyclones.ipynb
+++ b/diagnostics/tropical_cyclones/notebooks/tropical_cyclones.ipynb
@@ -121,24 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'dataset': {'model': 'IFS', 'exp': 'tco2559-ng5-cycle3', 'source2d': '2D_1h_native', 'source3d': '3D_1h_native'}, 'paths': {'tmpdir': '/home/b/b382216/work/tc/tmpdir', 'fulldir': '/home/b/b382216/work/tc/fullres', 'plotdir': '/home/b/b382216/work/tc/Figures/'}, 'setup': {'loglevel': 'INFO'}, 'grids': {'lowgrid': 'r100', 'highgrid': 'r010'}, 'varlist': ['msl', '10u', '10v', 'tprate'], 'time': {'startdate': '2020-01-20', 'enddate': '2025-01-01', 'frequency': '6h'}, 'stream': {'streamstep': '10D'}, 'detect': {'boxdim': 10}, 'stitch': {'n_days_freq': 30, 'n_days_ext': 2}}"
+       "{'dataset': {'model': 'IFS', 'exp': 'tco1279-orca025-cycle3', 'source2d': '2D_1h_native', 'source3d': '3D_1h_native'}, 'paths': {'tmpdir': '/home/b/b382216/scratch/test/fulldir', 'fulldir': '/home/b/b382216/scratch/test/fulldir', 'plotdir': '/home/b/b382216/work/tc/Figures/'}, 'setup': {'loglevel': 'INFO'}, 'grids': {'lowgrid': 'r100', 'highgrid': '100'}, 'varlist': ['msl'], 'time': {'startdate': '2020-01-20', 'enddate': '2025-01-01', 'frequency': '6h'}, 'stream': {'streamstep': '10D'}, 'detect': {'boxdim': 10}, 'stitch': {'n_days_freq': 30, 'n_days_ext': 2}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load the config file\n",
-    "tdict = load_yaml('config_tcs_notebook.yaml')\n",
-    "tdict"
+    "config = load_yaml('config_tcs_notebook.yaml')\n",
+    "config"
    ]
   },
   {
@@ -152,17 +152,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m2023-11-22 16:43:45 :: TCs :: WARNING  -> Model IFS - Exp: tco1279-orca025-cycle3\u001b[0m\n",
+      "\u001b[33m2023-11-22 16:43:45 :: TCs :: WARNING  -> Initialised streaming for 10D days starting on 2020-01-20\u001b[0m\n",
+      "\u001b[38;20m2023-11-22 16:43:48 :: Reader :: INFO     -> Fixes found for model IFS, experiment tco1279-orca025-cycle3, source 2D_1h_native\u001b[0m\n",
+      "\u001b[38;20m2023-11-22 16:43:48 :: Reader :: INFO     -> For source 2D_1h_native, method for fixes is: default\u001b[0m\n",
+      "\u001b[38;20m2023-11-22 16:43:48 :: yaml :: INFO     -> Updating the log_level to INFO\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# initialise tropical class with streaming options\n",
     "tropical = TCs(tdict=config, streaming=True,\n",
-    "                model=model, exp=exp, source2d=source2d, source3d=source3d,\n",
     "                stream_step=config['stream']['streamstep'],\n",
     "                stream_startdate=config['time']['startdate'],\n",
-    "                paths=paths,\n",
-    "                loglevel=loglevel,\n",
+    "                paths=config['paths'],\n",
+    "                loglevel=config['setup']['loglevel'],\n",
     "                nproc=1)\n",
     "tropical.loop_streaming(tdict)"
    ]
