fix regrid notebook

--- a/notebooks/reader/regrid.ipynb
+++ b/notebooks/reader/regrid.ipynb
@@ -126,9 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the actual data. By default these data have not been regridded yet. \n",
-    "\n",
-    "You could ask to regrid them directly by specifying the argument `regrid=True` but please be warned that without a selection on dates this will take longer. It is usually more efficient to first load the data, select and then regrid."
+    "Load the actual data. By default these data have not been regridded yet. "
    ]
   },
   {
@@ -326,7 +324,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and regrid them (as an elternative we could have used directly the option \"regrid=True\" for the `retrieve()` method)"
+    "and regrid them"
    ]
   },
   {
@@ -436,7 +434,8 @@
     "zoom=6\n",
     "\n",
     "reader = Reader(model=\"ICON\", exp=\"ngc3028\", source=\"P1D\", zoom=6, regrid=\"r100\")\n",
-    "data = reader.retrieve(var=[\"to\", \"tke\", \"zos\", \"2t\"], regrid=True)"
+    "data1 = reader.retrieve(var=[\"to\", \"tke\", \"zos\", \"2t\"])\n",
+    "data = reader.regrid(data1)"
    ]
   },
   {
