--- a/diagnostics/ssh_jal/notebooks/ssh_example_outputs.ipynb
+++ b/diagnostics/ssh_jal/notebooks/ssh_example_outputs.ipynb
@@ -99,7 +99,23 @@
       "/home/a/a270238/conda/envs/aqua_common/lib/python3.11/site-packages/dask/array/numpy_compat.py:51: RuntimeWarning: invalid value encountered in divide\n",
       "  x = np.divide(x1, x2, out)\n",
       "\u001b[38;2;64;184;50m2023-11-26 14:51:27 :: ssh_logger :: INFO     -> output saved, now regridding using the aqua regridder\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2023-11-26 14:51:27 :: ssh_logger :: INFO     -> initializing AQUA reader to read the model inputs for {'name': 'FESOM', 'experiment': 'tco2559-ng5-cycle3', 'source': '2D_daily_native', 'regrid': 'r025', 'variable': 'zos', 'zoom': None, 'timespan': ['2020-01-21', '2024-12-31']}\u001b[0m\n"
+      "\u001b[38;2;64;184;50m2023-11-26 14:51:27 :: ssh_logger :: INFO     -> initializing AQUA reader to read the model inputs for {'name': 'FESOM', 'experiment': 'tco2559-ng5-cycle3', 'source': '2D_daily_native', 'regrid': 'r025', 'variable': 'zos', 'zoom': None, 'timespan': ['2020-01-21', '2024-12-31']}\u001b[0m\n",
+      "\u001b[38;2;255;165;0m2023-11-26 14:52:45 :: eccodes :: WARNING  -> ShortName sst have multiple grib codes associated: ['34', '151159']\u001b[0m\n",
+      "\u001b[38;2;255;165;0m2023-11-26 14:52:45 :: eccodes :: WARNING  -> AQUA will take the first so that sst -> 34, please set up a correct fix if this does not look right\u001b[0m\n",
+      "\u001b[38;2;255;165;0m2023-11-26 14:52:45 :: eccodes :: WARNING  -> ShortName vo have multiple grib codes associated: ['262503', '138']\u001b[0m\n",
+      "\u001b[38;2;255;165;0m2023-11-26 14:52:45 :: eccodes :: WARNING  -> AQUA will take the first so that vo -> 262503, please set up a correct fix if this does not look right\u001b[0m\n",
+      "\u001b[38;2;255;165;0m2023-11-26 14:52:45 :: eccodes :: WARNING  -> ShortName wo have multiple grib codes associated: ['262507', '151133']\u001b[0m\n",
+      "\u001b[38;2;255;165;0m2023-11-26 14:52:45 :: eccodes :: WARNING  -> AQUA will take the first so that wo -> 262507, please set up a correct fix if this does not look right\u001b[0m\n",
+      "\u001b[38;2;255;165;0m2023-11-26 14:52:45 :: eccodes :: WARNING  -> ShortName so have multiple grib codes associated: ['262500', '151130']\u001b[0m\n",
+      "\u001b[38;2;255;165;0m2023-11-26 14:52:45 :: eccodes :: WARNING  -> AQUA will take the first so that so -> 262500, please set up a correct fix if this does not look right\u001b[0m\n",
+      "\u001b[38;2;255;165;0m2023-11-26 14:52:45 :: eccodes :: WARNING  -> ShortName tprate have multiple grib codes associated: ['260048', '172228']\u001b[0m\n",
+      "\u001b[38;2;255;165;0m2023-11-26 14:52:45 :: eccodes :: WARNING  -> AQUA will take the first so that tprate -> 260048, please set up a correct fix if this does not look right\u001b[0m\n",
+      "\u001b[38;2;64;184;50m2023-11-26 14:52:45 :: ssh_logger :: INFO     -> FESOM data spans from 2020-01-20T23:56:00.000000000 to 2024-12-31T23:56:00.000000000\u001b[0m\n",
+      "\u001b[38;2;64;184;50m2023-11-26 14:52:45 :: ssh_logger :: INFO     -> Getting SSH data complete for FESOM, now computing standard deviation on the default timestamp\u001b[0m\n",
+      "\u001b[38;2;64;184;50m2023-11-26 14:52:45 :: ssh_logger :: INFO     -> computation complete, saving output file\u001b[0m\n",
+      "\u001b[38;2;64;184;50m2023-11-26 14:55:43 :: ssh_logger :: INFO     -> output saved, now regridding using the aqua regridder\u001b[0m\n",
+      "\u001b[38;2;64;184;50m2023-11-26 14:55:44 :: ssh_logger :: INFO     -> visualizing the data in subplots\u001b[0m\n",
+      "\u001b[38;2;64;184;50m2023-11-26 14:55:53 :: ssh_logger :: INFO     -> Saving plots as a PDF output file\u001b[0m\n"
      ]
     }
    ],
