update documentation and fldmean notebook

--- a/notebooks/reader/fldmean.ipynb
+++ b/notebooks/reader/fldmean.ipynb
@@ -7051,9 +7051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load the actual data. By default these data have not been regridded yet. \n",
-    "\n",
-    "You could ask to regrid them directly by specifying the argument `regrid=True` but please be warned that without a selection on dates this will take longer. It is usually more efficient to first load the data, select and then regrid."
+    "Load the actual data. By default these data have not been regridded yet. "
    ]
   },
   {
